--- a/my-app/src/components/ProductInfo/style.css
+++ b/my-app/src/components/ProductInfo/style.css
@@ -1,6 +1,12 @@
 .product-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
   }
   
+  img {
+display: flex; justify-content: space-evenly;
+max-width: 200px
+
+
+  }
