--- a/my-app/src/components/ProductInfo/style.css
+++ b/my-app/src/components/ProductInfo/style.css
@@ -5,8 +5,8 @@
   }
   
   img {
-display: flex; justify-content: space-evenly;
+display: flex;
+justify-content: space-evenly;
+align-items: center;
 max-width: 200px
-
-
   }
