--- a/my-app/src/components/ProductInfo/style.css
+++ b/my-app/src/components/ProductInfo/style.css
@@ -4,9 +4,17 @@
     gap: 20px;
   }
   
-  img {
-display: flex;
-justify-content: space-evenly;
-align-items: center;
-max-width: 200px
+  .product-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid #ccc;
+    padding: 10px;
   }
+  
+  .product-image {
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
+  }
+  
