Finalised CSS - Added description to show on product hover

--- a/my-app/src/components/ProductInfo/style.css
+++ b/my-app/src/components/ProductInfo/style.css
@@ -81,3 +81,11 @@
 .cart-info {
   font-size: 18px;
 }
+
+.product-desc {
+  display: none;
+}
+
+.product-item:hover .product-desc {
+  display: flex;
+}
